Add basic client and some methods. Also added missing objects

--- a/src/WorldState/WorldState.csproj
+++ b/src/WorldState/WorldState.csproj
@@ -6,4 +6,8 @@
     <AssemblyName>WorldState</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WorldState.Data\WorldState.Data.csproj" />
+  </ItemGroup>
+
 </Project>
